--- a/djangoggirls - copia/blog/templates/blog/base.html
+++ b/djangoggirls - copia/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
     <body>
 	<div class="main">	
 
-	<h1> Django Girls blog By daniel-x86 </h1>
+	<h1> Django Gerls blog By daniel-x86 </h1>
 	
 	{% if user.is_authenticated %}
 	<br>
